# py-invoices

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  evaluate_compliance.py  invoices.db  pyproject.toml
.agent/workflows/: publish.md  publish_pydantic_invoices.md  release_new_version.md  setup.md  update_deps.md
.github/workflows/: ci.yml  publish.yml
docs/: IMPLEMENTATION_MATRIX.md
eval_output/: INV-STD-001.xml
examples/: audit_usage.py  basic_usage.py  crud_usage.py  multi_db_usage.py  pdf_memory_usage.py  pdf_usage.py  persistent_audit_usage.py  settings_usage.py  sqlite_usage.py  verify_files_backend.py
files_data/json/clients/: 1.json
files_data/json/companies/: 1.json
files_data/json/invoices/: 1.json
files_data/md/clients/: 1.md
files_data/md/companies/: 1.md
files_data/md/invoices/: 1.md
files_data/xml/clients/: 1.xml
files_data/xml/companies/: 1.xml
files_data/xml/invoices/: 1.xml
output/: 0001.html  INV-2023-001.json  INV-2025-0001.html  INV-2025-0001.xml  INV-2025-0010.html  INV-2025-0010.xml
py_invoices/: __init__.py  constants.py
py_invoices/api/: deps.py  main.py
py_invoices/api/routers/: audit.py  clients.py  companies.py  credit_notes.py  (+5 more)
py_invoices/backends/: __init__.py
py_invoices/cli/: README.md  audit.py  clients.py  companies.py  config.py  credit_notes.py  invoices.py  main.py  payment_notes.py  payments.py  products.py  setup.py  templates.py  utils.py  validate.py
py_invoices/config/: __init__.py  settings.py
py_invoices/core/: __init__.py  audit_service.py  credit_service.py  html_service.py  numbering_service.py  pdf_service.py  ubl_service.py  validator.py
py_invoices/plugins/: __init__.py  base.py  factory.py  registry.py
py_invoices/templates/: invoice.html.j2  ubl_invoice.xml.j2
py_invoices/utils/: image.py
test_output/: INV-2026-0001.xml
tests/: conftest.py  smoke_test.py  test_cli.py  test_cli_config.py  test_cli_details.py  test_cli_stats_clone.py  test_credit_flow.py  test_version.py
tests/integration/: test_api_credit_notes.py  test_api_new_endpoints.py  test_memory_backend.py  test_sqlite_backend.py  test_user_scenario.py
tests/unit/: test_no_extras.py  test_plugins.py  test_services.py  test_settings.py  test_storage_yaml.py  test_version.py
(+38 files in other folders)
